--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,9 @@
     "48": "res/icons/icon-48.png",
     "128": "res/icons/icon-128.png"
   },
+  "action": {
+    "default_popup": "popup.html"
+  },
   "permissions":[
     "storage"
   ],
